Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19123

setting projid on a dangling or self-referential symlink fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      Running "lfs project -p" on a dangling symlink or a symlink that refers to itself fails:

      # ln -s foo /myth/tmp/projid-900/symlink
      # lfs project -p 1000 /myth/tmp/projid-900/symlink
      lfs: failed to stat '/myth/tmp/projid-900/symlink': No such file or directory
      # ln -s symlink3 /myth/tmp/projid-900/symlink3
      # lfs project -p 1000 /myth/tmp/projid-900/symlink3
      lfs: failed to stat '/myth/tmp/projid-900/symlink3': Too many levels of symbolic links
      

      It should be possible to fix this by using open(O_NOFOLLOW) to open the symlink.

            adilger Andreas Dilger
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: